Closed Bug 58134 Opened 24 years ago Closed 24 years ago

Photo Hunt gives errors and is unplayable with SW8 and SW8.5r133 on mac/win

Categories

(Core Graveyard :: Plug-ins, defect, P3)

defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: kcunningham, Assigned: peterl-retired)

References

()

Details

(Keywords: shockwave, Whiteboard: 4xp)

Attachments

(2 files)

From Bugzilla Helper:
User-Agent: Mozilla/5.0 (Macintosh; N; PPC; en-US; m18) Gecko/20001019 Netscape6/6.0
BuildID:    2000010198

   Photo Hunt gives errors on NS6pr3 and is unplayable with SW8 and SW8.5r133 on
mac/win

Reproducible: Always
Steps to Reproduce:
 Photo Hunt gives errors on NS6pr3 and is unplayable with SW8 and SW8.5r133 on
mac/win

Actual Results:                              can't play Photo Hunt

Expected Results:                             to play without error

  Bug 63041 in our bugbase
reassign:peter
Assignee: av → peterl
Kelly,If I am not wrong, Eric had sent you(macromedia) the latest bits for 
seamonkey to test with..sometime last week. Is it possible for you to use a 
latest build and see if this problem still exits?  Thanks! cc:ekrock
oh, pardon me. I did not see the build id as 1019 which you have mentioned. 
Earlier,I just read the 'NS6pr3' so was confused. So , I assume you are using 
1019 build.
This WFM on Win32 all the time.

On Mac, I get a "Shockwave Error: Out of memory, even after purging all purgable 
castmembers." This box looks to be generated by shockwave (8.5). Haven't tried 
8.0 yet. 

Kelly, is there a "fix" for this out-of-memory error? Can you try this again on 
Win32 with a new nightly. In the summary it says "gives errors". What 
errors? Thanks.

Removing NS6pr3 as this happens post PR3.
Summary: Photo Hunt gives errors on NS6pr3 and is unplayable with SW8 and SW8.5r133 on mac/win → Photo Hunt gives errors and is unplayable with SW8 and SW8.5r133 on mac/win
Can't test the bug on Linux, since shockwave.com will sniff OS and not let me
in.  :)
Accepting bug.... and adding shockwave keyword

With the fix to bug 54186 checked in (8/30 or newer builds), I can reproduce 
this on both Win32 and Mac. On Mac, you may need to increase the memory 
allocated to Mozilla (I doubled it). However, I'm really going to need 
Macromedia's help on this one because the error given by the plugin isn't very 
helpful.

Kelly, I don't know how to get to your bugbase to check your report. I have no 
idea where to start on our end hence the error generated by your plugin. Do you 
or someone else know why Shockwave reports this error?
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Keywords: shockwave
Whiteboard: 4xp
Depends on: 58957
Kelly,

I just tried this again on Win32 and the games says:

"Looks like we're experiencing some technical difficulties. Please exit and 
restart the game"

This error message is a little vague, do you or anyone else in your team know 
what this message really means?

Boris, try going to: http://www.shockwave.com/bin/shockwave/entry.jsp?skip=net6 
Peter,

Tried going to the url provided. Got the message about shockwave.com only
supporting win32 of various flavors and MacOS 8.1+

<shrug>
The following comments were sent from Peter Grandmaison to Peter L in an 
email.  They detail a fix for this movie and Tank Wars.
After adding 

if (stream->end == 0xffffffff) 
        stream->end = 0; 
if (stream->lastmodified) 
        stream->lastmodified = 0x3936e4d9;


to NPP_NewStream(), photohunt and tankwars works (the stream->end change was 
from friday's changes to get netlingo working, so I am pretty certain it is 
unessential towards getting these two movies working).

Content is relying on streams of unknown length having an end of zero (and not 
0xffffffff).

And you aren't correctly reporting the lastmodified, which is breaking some 
existing content ( although, strictly speaking, it is correct to pass 0 if you 
don't know ) where all other browsers have reported the lastmodified correctly.

So a resolution is at hand for netlingo, tankwars and photohunt.
sr=buster, with 1 question.  What's the ownership model for char * lastModified?
 Are you required to free it after it's set, or is it a const pointer to memory
someone else owns?  If the first, please be sure not to leak it.  If the second,
maybe declare it const?
Probably something like this would be cleaner:

   nsXPIDLCString lastModified;
   httpChannel->GetResponseHeader(header, getter_Copies(lastModified));
   ...
That's what I had originally, but then I realized that we're not sending the 
plugin the string, simply converting it to an integer. Therefore, I think I can 
just do a nsCRT::free(lastModified).
OK with me. a=av
patch checked-in
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
No longer depends on: 58957
Tested and verified fixed by Macromedia QA and Peter Grandmaison on 12/12 with 
the latest build of NS6 off of 
http://ftp.mozilla.org/pub/mozilla/nightly/latest/.
verified that photo hunt is playable and works on windows and mac trunk builds 
1212. 
Status: RESOLVED → VERIFIED
well..the resolution is absent(juse see VERIFIED)..so am reopening and marking 
fixed again.
Status: VERIFIED → REOPENED
resolving fixed.
Status: REOPENED → RESOLVED
Closed: 24 years ago24 years ago
Resolution: --- → FIXED
marking verified.
Status: RESOLVED → VERIFIED
This was also verified on the win/mac branch builds with shockwave 8.0 and 8.5
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: