Set lastModified attribute for a plugin stream b=58134 a=av sr=buster